--- a/_layouts/browse.html
+++ b/_layouts/browse.html
@@ -38,4 +38,91 @@ custom-foot: js/browse-js.html
     <div class="spinner-border text-dark" role="status"><span class="visually-hidden">Loading...</span></div>
 </div>
 
-<div class="row" id="browseItems"></div>
+<div class="container-fluid">
+    <div class="row">
+    <div class="d-none d-md-block col-md-3">
+        <div class="accordion mb-4" id="accordionExample">
+            <div class="card">
+              <div class="card-header" id="headingTwo">
+                <h2 class="mb-0">
+                  <button class="btn btn-link btn-block text-left h4 text-dark collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    Main Subject
+                  </button>
+                </h2>
+              </div>
+              <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+                <div class="card-body">{% assign mapped_ctypes = site.data[site.metadata] | map: "collection_type" | compact | uniq %}{% capture included_ctypes %}{% for s in mapped_ctypes %}{{s}} {% endfor %}{% endcapture %}
+                    <ul>
+                        {% for ctype in site.data.collection-types%}{% if included_ctypes contains ctype.title %}
+                        <li class="my-1 "><a href="#{{collection_type.title}}"  class="text-dark">{{ctype.title}}</a></li>
+                        {% endif %}
+                        {% endfor %}
+                      </ul>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header" id="headingThree">
+                <h2 class="mb-0">
+                  <button class="btn btn-link btn-block text-left h4 text-dark collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                  Material Type
+                  </button>
+                </h2>
+              </div>
+              <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+                <div class="card-body">{% assign mapped_types = site.data[site.metadata] | map: "material_type" | compact | uniq %}{% capture included_types %}{% for t in mapped_types %}{{t}} {% endfor %}{% endcapture %}
+                    <ul>
+                        {% for type in site.data.types%}{% if included_types contains type.title %}
+                        <li class="my-1 "><a href="#{{type.title}}"  class="text-dark">{{type.title}}</a></li>
+                        {% endif %}
+                        {% endfor %}
+                      </ul>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header" id="headingOne">
+                <h2 class="mb-0">
+                  <button class="btn btn-link btn-block text-left h4 text-dark collapsed" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                    Region
+                  </button>
+                </h2>
+              </div>
+          
+              <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+                <div class="card-body">{% assign mapped_regions = site.data[site.metadata] | map: "region" | compact | uniq %}{% capture included_regions %}{% for r in mapped_regions %}{{r}} {% endfor %}{% endcapture %}
+                  <ul>
+                    {% for region in site.data.regions%}{% if included_regions contains region.title %}
+                    <li class="my-1"><a href="#{{region.title}}" class="text-dark">{{region.title}}</a></li>
+                    {% endif %}
+                    {% endfor %}
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header" id="headingZero">
+                <h2 class="mb-0">
+                  <button class="btn btn-link btn-block text-left h4 text-dark collapsed" type="button" data-toggle="collapse" data-target="#collapseZero" aria-expanded="true" aria-controls="collapseZero">
+                    Organization
+                  </button>
+                </h2>
+              </div>
+          
+              <div id="collapseZero" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+                <div class="card-body">
+                  <ul>
+                    {% for org in site.data.orgs %}{% unless org.title contains "Spud" %}
+                    <li class="my-1 "><a href="#{{org.title}}" class="text-dark">{{org.title}} ({{org.short}})</a></li>
+                    {% endunless %}{% endfor %}
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+    </div>
+        <div class="col-12 col-md-9 pl-5">
+    <div class="row" id="browseItems"></div>
+        </div> 
+    </div>
+    </div>
