--- a/_layouts/item/record.html
+++ b/_layouts/item/record.html
@@ -3,10 +3,14 @@
 layout: item/item-page-base
 ---
 
-<div class="mb-4 text-center">
+<div class="card mb-4 text-center">
 
-    <div class="my-2">
+    {% include item/image-gallery.html %}
+    
+    <div class="card-body">
+
         {% include item/download-buttons.html %}
+
     </div>
 
 </div>
