--- a/_sass/_pages.scss
+++ b/_sass/_pages.scss
@@ -39,8 +39,12 @@
     .modal-xxl{ max-width: 90%;  }
 }
 
-
 /* browse */
+.accordion-button:not(.collapsed) {
+    color: #343c44;
+    background-color: #f5f5f6;
+    box-shadow: inset 0 -1px 0 rgba(0,0,0,.125);
+}
 
 /* map */
 #map { height: 750px; z-index: 98; }
