Shorten footer description

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,8 +4,8 @@
 
         <div class="col-md-9  px-4 mt-2">
 
-            <h2 class="h4"><a href="{{ '/' | relative_url }}" class="text-white font-weight-normal">{{ site.title }}</a></h2>
-            <p class="text-white"><small>{{ site.description }}</small></p>
+            <h4 class="text-white">About this Collection</h4>
+            <p class="text-white"><small>Featuring sites created by a variety of individuals, organizations, and institutions, this collection of CollectionBuilder projects is meant to demonstrate the range of possibilities and use cases for CollectionBuilder.</small></p>
             <nav>
                 <ul id="footer-nav" class="nav nav-pills ">
                     {%- assign navItems = site.data.config-nav | where_exp: 'item', 'item.dropdown_parent == nil' -%}
