--- a/_includes/index/carousel.html
+++ b/_includes/index/carousel.html
@@ -19,7 +19,7 @@
 {%- endcomment -%}
 
 {%- assign carousel-max = include.max | default: 9 -%}
-{%- assign btn-color = include.btn-color | default: "primary" -%}
+{%- assign btn-color = include.btn-color | default: "success" -%}
 {%- assign btn-text = include.btn-text | default: "View Item" -%}
 {% if site.data.theme.carousel-child-objects == true %}
 {%- assign carousel-items = site.data[site.metadata] | where_exp: 'item','item.objectid' | where_exp: "item","item.image_small != nil or item.image_thumb != nil"-%}
