--- a/_includes/index/description.html
+++ b/_includes/index/description.html
@@ -1,7 +1,6 @@
 <div class="card mb-3">
   <div class="card-body">
-    <h5 class="card-title">Description</h5>
     <p class="card-text">{{ site.description }}</p>
-    <a class="btn btn-primary" href="{{ '/about.html' | relative_url }}" role="button">Learn More &raquo;</a>
+    <a class="btn btn-success" href="{{ '/about.html' | relative_url }}" role="button">Learn More &raquo;</a>
   </div>
 </div>
