--- a/_includes/index/description.html
+++ b/_includes/index/description.html
@@ -1,6 +1,6 @@
 <div class="card mb-3">
   <div class="card-body">
     <p class="card-text">{{ site.description }}</p>
-    <a class="btn btn-success" href="{{ '/about.html' | relative_url }}" role="button">Learn More &raquo;</a>
+    <a class="btn btn-dark" href="{{ '/about.html' | relative_url }}" role="button">Learn More &raquo;</a>
   </div>
 </div>
