--- a/_includes/index/description.html
+++ b/_includes/index/description.html
@@ -1,6 +1,7 @@
 <div class="card mb-3">
   <div class="card-body">
     <p class="card-text">{{ site.description }}</p>
-    <a class="btn btn-dark" href="{{ '/about.html' | relative_url }}" role="button">Learn More &raquo;</a>
-  </div>
+  <a class="btn btn-dark" href="https://collectionbuilder.github.io/" target="_blank" role="button">CB Website &raquo;</a>
+  <a class="btn btn-dark" href="https://github.com/CollectionBuilder" target="_blank" role="button">CB Code Repository &raquo;</a>
+</div>
 </div>
