Change button text

--- a/_includes/index/description.html
+++ b/_includes/index/description.html
@@ -1,7 +1,7 @@
 <div class="card mb-3">
   <div class="card-body">
     <p class="card-text">{{ site.description }}</p>
-  <a class="btn btn-dark" href="https://collectionbuilder.github.io/" target="_blank" role="button">CB Website &raquo;</a>
+  <a class="btn btn-dark" href="https://collectionbuilder.github.io/" target="_blank" role="button">CollectionBuilder Website &raquo;</a>
   <a class="btn btn-dark" href="https://github.com/CollectionBuilder" target="_blank" role="button">CB Code Repository &raquo;</a>
 </div>
 </div>
