Add submit your project text to home page

--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -9,6 +9,7 @@ custom-foot: js/random-featured-image-js.html
   <div class="col-md-8">
 
     {% include index/description.html %}
+    {% include index/add-project.html %}
     {% include index/carousel.html %}
     
   </div>
