--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -41,5 +41,9 @@
     <div class="col-md-12 text-center pt-3 pb-1">
         <p class="text-white">Last updated {{ site.time | date: '%Y' }}</p>
     </div>
-
+<noscript>
+    <!-- Matomo Image Tracker-->
+<img referrerpolicy="no-referrer-when-downgrade" src="https://cdil.us/statistics/matomo.php?idsite=17&amp;rec=1" style="border:0" alt="" />
+<!-- End Matomo -->
+</noscript>
 </footer>
