start reorganizing so things can get updated and fixed up a bit

--- a/_includes/js/random-featured-image-js.html
+++ b/_includes/js/random-featured-image-js.html
@@ -1,12 +1,28 @@
-{%- assign items = site.data.[site.metadata] | where_exp: 'item', 'item.home_feature' -%}
-<script>
-    //title,youtubeid,objectid
-    var featureItems = [ {% for o in items %}[ {{ o.title | escape | jsonify }}, {{ o.objectid | jsonify }} ]{% unless forloop.last %}, {% endunless %}{% endfor %}];
-    var placeholder = "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 3 2'%3E%3C/svg%3E";
-    var randomFeaturedPhoto = document.getElementById("home-banner");
-    var randomFeaturedCollection = document.getElementById("featured_link");
-    const random = Math.floor(Math.random() * featureItems.length);    
-    randomFeaturedPhoto.style.backgroundImage = "url('{{'/objects/' | relative_url }}" + featureItems[random][1] + ".jpg')";
-    randomFeaturedCollection.href = "{{'/items/' | relative_url }}" + featureItems[random][1] + ".html";
-    randomFeaturedCollection.title = featureItems[random][0];
+<script>    
+    /* Fisher-Yates shuffle for random sorting */
+    function shuffle(array) {
+        let m = array.length;
+        while (m) {
+            const i = Math.floor(Math.random() * m--);
+            [array[m], array[i]] = [array[i], array[m]];
+        }
+        return array;
+    }
+    /* init banner image */
+    // set up banner images
+    {% assign items = site.data[site.metadata] | where_exp: 'item', 'item.home_feature' %}
+    var bannerImages = [ 
+        {% for i in items %}{ "src": "{{ i.featured_image | relative_url }}", "position": "{{ b.position | default: 'center' }}", "alt": {{ i.title | escape | jsonify }}, "link": "{{ '/items/' | relative_url }}{{ i.objectid }}.html" }{% unless forloop.last %},{% endunless %} {% endfor %}
+    ];
+    var featuredImage = shuffle(bannerImages).pop();
+    // set background image
+    var homeBanner = document.getElementById("home-banner");
+    homeBanner.style.backgroundImage = `url(${featuredImage.src})`;
+    homeBanner.style.backgroundRepeat = "no-repeat";
+    homeBanner.style.backgroundSize = "cover";
+    homeBanner.style.backgroundPosition = featuredImage.position;
+    //homeBanner.style.backgroundAttachment = "fixed";
+    // set featured image link
+    document.getElementById("featured-image-link").innerHTML = `<a class="text-white fs-6" href="${featuredImage.link}" title="${featuredImage.alt}">Featured Image</a>`;
 </script>
+
