--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
   </head>
   <body class="d-flex flex-column h-100">
     <div id="skip-to-content"><a href="#maincontent">Skip to main content</a></div>
-    {% include collection-nav.html %}
+    {% include cb-examples-nav.html %}
     {% include collection-banner.html %}
     <main id="maincontent" role="main" class="flex-shrink-0">
       {{ content }}
