--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,17 +2,17 @@
 
     <div class="row border-bottom border-white pb-4 mb-2">
 
-        <div class="col-md-9  px-4 mt-2">
+        <div class="col-md-7 px-4 mt-3">
 
-            <h4 class="text-white">About this Collection</h4>
-            <p class="text-white"><small>Featuring sites created by a variety of individuals, organizations, and institutions, this collection of CollectionBuilder projects is meant to demonstrate the range of possibilities and use cases for CollectionBuilder.</small></p>
+            <h2 class="h4"><a href="{{ '/' | relative_url }}" class="text-white">{{ site.title }}</a></h2>
+            <p class="text-white"><small>{{ site.description }}</small></p>
             <nav>
                 <ul id="footer-nav" class="nav nav-pills ">
                     {%- assign navItems = site.data.config-nav | where_exp: 'item', 'item.dropdown_parent == nil' -%}
                     {% for nav in navItems %}
                     <li class="nav-item">
                     {% if nav.stub %}
-                        <a class="nav-link text-light {% if page.url == nav.stub %} active{% endif %}" href="{{ nav.stub | relative_url }}">{{ nav.display_name }}</a>
+                        <a class="nav-link text-light{% if page.url == nav.stub %} active{% endif %}" href="{{ nav.stub | relative_url }}">{{ nav.display_name }}</a>
                     {%- else -%}
                     {% assign childStub = site.data.config-nav | where_exp: 'item', 'item.dropdown_parent == nav.display_name' | first %}
                         <a class="nav-link text-light{% if page.url == childStub.stub %} active{% endif %}" href="{{ childStub.stub | relative_url }}">{{ nav.display_name }}</a>
@@ -24,11 +24,11 @@
 
         </div>
 
-        <div class="col-md-3 mt-2 text-end">
+        <div class="col-md-5 mt-3 text-center">
 
-            <p class="text-white" id="footer-credits">
+            <p class="text-white text-md-end" id="footer-credits">
                 <small><em>built with</em>
-                    <a href="https://collectionbuilder.github.io/" target="_blank" rel="noopener" title="CollectionBuilder">
+                    <a href="https://collectionbuilder.github.io/" title="CollectionBuilder">
                         <img src="{{ '/assets/img/collectionbuilder-logo.png' | relative_url }}" class="img-fluid" alt="CollectionBuilder" >
                     </a>
                 </small>
@@ -41,9 +41,5 @@
     <div class="col-md-12 text-center pt-3 pb-1">
         <p class="text-white">Last updated {{ site.time | date: '%Y' }}</p>
     </div>
-<noscript>
-<!-- Matomo Image Tracker-->
-<img referrerpolicy="no-referrer-when-downgrade" src="https://cdil.us/statistics/matomo.php?idsite=3&amp;rec=1" style="border:0" alt="" />
-<!-- End Matomo -->
-</noscript>
+
 </footer>
