--- a/_includes/item/download-buttons.html
+++ b/_includes/item/download-buttons.html
@@ -9,21 +9,22 @@
 
 {%- endcomment -%}
 <div class="btn-group" role="group" aria-label="Item options">
-    {% if page.object_transcript %}<button class="btn btn-outline-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTranscript" aria-expanded="false" aria-controls="collapseExample">View Transcript</button>{% endif %}
+    {% if page.object_transcript %}<button class="btn btn-outline-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTranscript" aria-expanded="false" aria-controls="collapseTranscript">View Transcript</button>{% endif %}
     {% if page.date %}{%- capture year -%}{% if page.date contains "-" %}{{ page.date | split: "-" | first }}{% elsif page.date contains "/" %}{{ page.date | split: "/" | last }}{% else %}{{ page.date }}{% endif %}{%- endcapture -%}
     <a href="{{ year | strip | prepend: '/timeline.html#y' | relative_url }}" class="btn btn-outline-primary">View on Timeline</a>{% endif %}
     {% if page.latitude and page.longitude %}
     <a href="{{ '/map.html?location=' | append: page.latitude  | append: ',' | append: page.longitude | append: '&marker=' | append: page.objectid | relative_url }}" class="btn btn-outline-primary">View on Map</a>{% endif %}
-    {% if page.object_location %}<a target="_blank" rel="noopener" href="{{ page.object_link }}" class="btn btn-outline-primary">
-        {% if page.object_location contains 'vimeo' %}View on Vimeo{% elsif page.object_location contains 'youtu' %}View on YouTube{% elsif page.display_template == 'record'%}Link to Collection{% else %}Download {{ page.format | split: '/' | last | default: page.display_template | upcase }}{% endif %}
+    {% if page.object_location %}<a target="_blank" rel="noopener" href="{{ page.object_location | relative_url }}" class="btn btn-outline-primary">
+        {% if page.display_template == 'video' and page.object_location contains 'vimeo' %}View on Vimeo{% elsif page.display_template == 'video' and page.object_location contains 'youtu' %}View on YouTube{% elsif page.display_template == 'record'%}Link to Object{% else %}Download {{ page.format | split: '/' | last | default: page.display_template | upcase }}{% endif %}
     </a>{% endif %}
 </div>
 {% if page.object_transcript %}
 <div class="collapse mt-3" id="collapseTranscript">
     <div class="card card-body text-start">
-        {% assign transcript_type = page.object_transcript | slice: 0,8 %}
-        {% if transcript_type == 'objects/' %}
-        {% assign transcript = site.pages | where: 'path',page.object_transcript | first %}
+        {% assign transcript_type = page.object_transcript | slice: 0,1 %}
+        {% if transcript_type == '/' %}
+        {% assign transcript_location = page.object_transcript | remove_first: '/' %}
+        {% assign transcript = site.pages | where: 'path', transcript_location | first %}
         {{ transcript.content | markdownify }}
         {% else %}
         {{ page.object_transcript | markdownify }}
