--- a/_layouts/examples-home.html
+++ b/_layouts/examples-home.html
@@ -5,7 +5,7 @@ custom-foot: js/random-featured-image-js.html
 ---
 <div id="home-banner" class="mb-0 p-0 position-relative border-bottom border-2">
 
-    <div id="home-title-box" class="row justify-content-center">
+    <div id="home-title-box">
         <div class="title-card p-2 text-end text-white bg-dark bg-opacity-75">
             <div class="container">
                 <a class="d-none d-md-block pe-5" href="{{ site.organization-link }}">
@@ -21,7 +21,7 @@ custom-foot: js/random-featured-image-js.html
 </div>
 
 <div class="container my-4">
-    {%- assign items = site.data[site.metadata] | where_exp: 'item','item.objectid' -%}
+
     <div class="row">
 
         <div class="col-md-8">
