rework home page

--- a/_layouts/examples-home.html
+++ b/_layouts/examples-home.html
@@ -29,6 +29,7 @@ custom-foot: js/random-featured-image-js.html
             <div class="card mb-3">
                 <div class="card-body">
                     <p class="card-text">{{ site.description }}</p>
+                    <p class="card-text"><a class="btn btn-lg btn-outline-primary m-2" href="">Explore Projects</a></p>
                     
                     <a class="btn btn-dark m-2" href="https://collectionbuilder.github.io/">CollectionBuilder Website &raquo;</a>
                     <a class="btn btn-dark m-2" href="https://github.com/CollectionBuilder">CB Code Repository &raquo;</a>
