--- a/_includes/item/breadcrumbs.html
+++ b/_includes/item/breadcrumbs.html
@@ -6,6 +6,6 @@
 {%- endcomment -%}
 <ol class="breadcrumb">
     <li class="breadcrumb-item"><a class="text-dark" href="{{ '/' | relative_url }}">Home</a></li>
-    <li class="breadcrumb-item"><a class="text-dark" href="{{ '/browse.html' | relative_url }}">Items</a></li>
+    <li class="breadcrumb-item"><a class="text-dark" href="{{ '/browse.html' | relative_url }}">Projects</a></li>
     <li class="breadcrumb-item active text-dark" aria-current="page">{{ page.title | truncatewords: 10 }}</li>
 </ol>
